--- a/YouTubeBrowser/Story/Base.lproj/Main.storyboard
+++ b/YouTubeBrowser/Story/Base.lproj/Main.storyboard
@@ -63,10 +63,10 @@
                                     <items>
                                         <menuItem title="Home" keyEquivalent="H" id="DKm-CI-9gC">
                                             <connections>
-                                                <action selector="openHome:" target="Ady-hI-5gd" id="lhc-0e-tdg"/>
+                                                <action selector="openHome:" target="Voe-Tx-rLC" id="O0M-hw-9Mh"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="Open Recent" id="tXI-mr-wws">
+                                        <menuItem title="Open Recent" hidden="YES" id="tXI-mr-wws">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <menu key="submenu" title="Open Recent" systemMenu="recentDocuments" id="oas-Oc-fiZ">
                                                 <items>
@@ -163,6 +163,13 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
                                     <items>
+                                        <menuItem title="Always on Top" id="ASf-2V-fP7">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="toggleAlwaysOnTop:" target="Voe-Tx-rLC" id="aPr-K0-6Zh"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem isSeparatorItem="YES" id="8N7-v1-m6i"/>
                                         <menuItem title="Minimize" keyEquivalent="m" id="OY7-WF-poV">
                                             <connections>
                                                 <action selector="performMiniaturize:" target="Ady-hI-5gd" id="VwT-WD-YPe"/>
@@ -202,7 +209,11 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="YouTubeBrowser" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="YouTubeBrowser" customModuleProvider="target">
+                    <connections>
+                        <outlet property="alwaysOnTopMenuItem" destination="ASf-2V-fP7" id="ptg-Oe-gZH"/>
+                    </connections>
+                </customObject>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
